--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mohit | Portfolio</title>
+    <title>Raksha | Portfolio</title>
   </head>
   <body class="bg-night">
     <div id="root"></div>
